# bitskipc

./: .gitignore  CMakeLists.txt  bitskipc.c  bm1366.c  bm1366.h  bm1366_sniff.md  bm1397.c  bm1397.h  bm1397_protocol.md  crc.c  dedumper.py  matched.txt  pretty.c  pretty.h  readme.md  serial_monitor.c  serial_monitor.h  stratum_dump.json  stratum_serial.txt  stratum_serial_1M_only.txt
captures/: bytes_rx.txt  bytes_tx.txt  bytes_tx2.txt  combined.txt
